# rusty-quadrature

./: Cargo.toml  README.md
helper/: gauss_legendre.rs  generate_jacobi_rule.py
simplex_rules/: generate_rust_simplex_rules.py
src/: gauss.rs  lib.rs  simplex_rule_definitions.rs  simplex_rules.rs  types.rs
src/duffy/: triangle.rs
src/gauss/: interval.rs  quadrilateral.rs  triangle.rs
src/simplex_rules/: gauss_legendre.rs  interval.rs  quadrilateral.rs  simplex_rule_definitions.rs  triangle.rs
